--- a/var.ipynb
+++ b/var.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "import pyspark\n",
+    "import 3.14spark\n",
     "from pyspark.context import SparkContext\n",
     "from pyspark.sql import SparkSession, SQLContext\n",
     "\n",
